NEWS for the R Package RLumModel

Changes in version 0.2.1 (XX, 2017):

  Miscellaneous:

         • Fix CRAN NOTE for not declared entry points.

Changes in version 0.2.0 (20th January, 2017):

  New functions::

         • set_ODE_Rcpp() & set_ODE_Rcpp():

             • Changed the main calculations of the ODEs to C++ via
               Rcpp. This results in an extreme fast calculation of ODE
               calcualtions. Slow calculations like DRT or SAR can be
               solved much faster now.

         • simulate_RF_and_heating():

             • Simulating the process of heating/cooling a sample and
               detect luminescence during irradiation.

  Bugfixes and changes::

         • calc_concentrations():

             • Add maximum change of concentration in specific level to
               slot 'info' in every RLum.Data.Curve.

         • calc_signal():

             • As a result of the changes in 'set_pars' the index of
               the luminescence center changed. This was adjusted in
               'calc_signal'.

         • model_LuminescenceSignals():

             • Add new parameter 'own_parameters': Parameter to submit
               an own parameter set for simulations. For further
               details see vignette 'RLumModel - Using own parameter
               sets'.

             • Add new parameter 'own_state_parameters': Parameter to
               submit own state parameters together with an own
               parameter set.

             • Add new parameter 'own_start_temperature': Parameter to
               submit own start temperature together with an own
               parameter set.

         • set_pars():

             • Changed order in the vectors N, E, s, A, B: The
               luminescence center is now always the last entry.  This
               was necessary to use OTOR models with own parameters
               much easier.

             • Output is now a list and not a RLum.Results object.
